# RingDecomposerLib

./: CMakeLists.txt
src/MinimalExample/: CMakeLists.txt  MinimalExample.c
src/RingDecomposerLib/: CMakeLists.txt
src/Test/: CMakeLists.txt
src/python/test/: test.py
